# server/routes/analytics.go
@@ -2,7 +2,6 @@
 package routes
 
 import (
-	"context"
 	"fmt"
 	"net/http"
 	"os"
@@ -10,7 +9,6 @@ import (
 	"time"
 
 	"github.com/gin-gonic/gin"
-	"go.mongodb.org/mongo-driver/bson"
 	"timeful/server/db"
 	"timeful/server/models"
 	"timeful/server/slackbot"
@@ -36,11 +34,8 @@ func InitAnalytics(router *gin.RouterGroup) {
 	analyticsRouter := router.Group("/analytics")
 
 	analyticsRouter.POST("/scanned-poster", scannedPoster)
-	analyticsRouter.POST("/upgrade-dialog-viewed", upgradeDialogViewed)
 	analyticsRouter.GET("/monthly-active-event-creators", AnalyticsBasicAuth(), getMonthlyActiveEventCreators)
 	analyticsRouter.GET("/monthly-active-event-creators-with-more-than-x-events", AnalyticsBasicAuth(), getMonthlyActiveEventCreatorsWithMoreThanXEvents)
-	analyticsRouter.POST("/upgrade-user", AnalyticsBasicAuth(), upgradeUser)
-	analyticsRouter.POST("/downgrade-user", AnalyticsBasicAuth(), downgradeUser)
 	analyticsRouter.GET("/user/:email", AnalyticsBasicAuth(), getUserByEmail)
 }
 
@@ -74,39 +69,6 @@ func scannedPoster(c *gin.Context) {
 			fmt.Sprintf(":face_with_monocle: Poster was scanned :face_with_monocle:\n*URL:* %s", payload.Url),
 		)
 	}
-
-	c.JSON(http.StatusOK, gin.H{})
-}
-
-// @Summary Notifies us when user has viewed the upgrade dialog
-// @Tags analytics
-// @Accept json
-// @Produce json
-// @Param payload body object{userId=string} true "Object containing the user id"
-// @Success 200
-// @Router /analytics/upgrade-dialog-viewed [post]
-func upgradeDialogViewed(c *gin.Context) {
-	payload := struct {
-		UserId string `json:"userId" binding:"required"`
-		Price  string `json:"price" binding:"required"`
-		Type   string `json:"type" binding:"required"`
-	}{}
-	if err := c.BindJSON(&payload); err != nil {
-		return
-	}
-
-	var message string
-	user := db.GetUserById(payload.UserId)
-	if user == nil {
-		message = fmt.Sprintf(":eyes: %s viewed the upgrade dialog (%s), type: %s", payload.UserId, payload.Price, payload.Type)
-	} else {
-		message = fmt.Sprintf(":eyes: %s %s (%s) viewed the upgrade dialog (%s), type: %s", user.FirstName, user.LastName, user.Email, payload.Price, payload.Type)
-	}
-
-	slackbot.SendTextMessageWithType(
-		message,
-		slackbot.MONETIZATION,
-	)
 
 	c.JSON(http.StatusOK, gin.H{})
 }
@@ -258,60 +220,6 @@ func getMonthlyActiveEventCreatorsWithMoreThanXEvents(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, results)
-}
-
-// @Summary Upgrades the specified user to Timeful Premium
-// @Tags analytics
-// @Accept json
-// @Produce json
-// @Param payload body object{email=string} true "Object containing the user email"
-// @Success 200
-// @Router /analytics/upgrade-user [post]
-func upgradeUser(c *gin.Context) {
-	payload := struct {
-		Email string `json:"email" binding:"required"`
-	}{}
-	if err := c.BindJSON(&payload); err != nil {
-		return
-	}
-
-	user := db.GetUserByEmail(payload.Email)
-	if user == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
-		return
-	}
-
-	stripeCustomerId := "premium"
-	user.StripeCustomerId = &stripeCustomerId
-	db.UsersCollection.UpdateOne(context.Background(), bson.M{"_id": user.Id}, bson.M{"$set": user})
-
-	c.JSON(http.StatusOK, gin.H{})
-}
-
-// @Summary Downgrades the specified user to Timeful Free
-// @Tags analytics
-// @Accept json
-// @Produce json
-// @Param payload body object{email=string} true "Object containing the user email"
-// @Success 200
-// @Router /analytics/downgrade-user [post]
-func downgradeUser(c *gin.Context) {
-	payload := struct {
-		Email string `json:"email" binding:"required"`
-	}{}
-	if err := c.BindJSON(&payload); err != nil {
-		return
-	}
-
-	user := db.GetUserByEmail(payload.Email)
-	if user == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
-		return
-	}
-
-	db.UsersCollection.UpdateOne(context.Background(), bson.M{"_id": user.Id}, bson.M{"$unset": bson.M{"stripeCustomerId": ""}})
-
-	c.JSON(http.StatusOK, gin.H{})
 }
 
 // @Summary Gets the user by email
